# OpenGL_ES_3.0

./: README.md  build.gradle  gradle.properties  settings.gradle  书签.md  微信读书.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: common_frag.glsl  common_vertex.glsl  layout_frag.glsl  layout_vertex.glsl
app/src/main/assets/chapter10/chapter10.1/: frag_light.sh  vertex_light.glsl
app/src/main/assets/chapter10/chapter10.4/: frag_cloud.glsl  frag_earth.sh  frag_moon.sh  frag_xk.sh  vertex_cloud.glsl  vertex_earth.sh  vertex_moon.sh  vertex_xk.sh
app/src/main/assets/chapter10/chapter10.5/: frag_light.glsl  vertex_light.glsl
app/src/main/assets/chapter10/chapter10.6/: vertex_light.glsl
app/src/main/assets/chapter3/: frag.glsl  vertex.glsl
app/src/main/cpp/: CMakeLists.txt  CMakeListsbak2.txt  RenderJNI.cpp  native-lib.cpp
app/src/main/cpp/chapter1/: jni_code.c  main.cpp
app/src/main/cpp/helloapp/: RenderJNI.h  native-lib.cpp
app/src/main/cpp/myEncapsulation/: FileUtil.h  TexBody.h  TexCuboid.cpp  TexCuboid.h  TexPlane.h
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/res/drawable/: corner_white_bg.xml  corner_white_bottom.xml  corner_white_top.xml  custom_btn_corner.xml  custom_button_bg.xml
app/src/main/res/layout/: activity_chapter223.xml  activity_chapter5.xml  activity_chapter51.xml  activity_chapter513.xml  activity_chapter516.xml  activity_chapter52.xml  activity_chapter53.xml  activity_chapter62.xml  activity_chapter73.xml  activity_chapter74.xml  activity_main.xml  activity_start_main.xml  class_item.xml  seekbar.xml  upgrade_dialog_layout2.xml
app/src/main/res/menu/: gl_menu.xml
app/src/main/res/values/: dimens.xml
customplugin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
repo/com/changan/customplugin/customplugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
(+380 files in other folders)
